Add href to tic-tac-toe

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>↧</p>
 
             <div id="container">
-                <a target="_blank">
+                <a href="https://tic-tac-toe-portfolio-project-game.netlify.app/" target="_blank">
                     <div class="work-tile" id="tic-tac-toe"></div>
                 </a>
                 
